// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`viewDetailsExtractor > snapshot tests > matches snapshot for full 2D view details extraction 1`] = `
{
  "acs": "0x123",
  "aspectSkew": 1.5,
  "gridOrient": 1,
  "gridPerRef": 10,
  "gridSpaceX": 100,
  "gridSpaceY": 100,
}
`;

exports[`viewDetailsExtractor > snapshot tests > matches snapshot for full 3D view details extraction 1`] = `
{
  "acs": "0x123",
  "aspectSkew": 1.5,
  "disable3dManipulations": true,
  "gridOrient": 1,
  "gridPerRef": 10,
  "gridSpaceX": 100,
  "gridSpaceY": 100,
  "modelClipGroups": [
    {
      "clip": [
        {
          "planes": {
            "clips": [
              [
                {
                  "dist": 10.5,
                  "normal": [
                    1,
                    0,
                    0,
                  ],
                },
              ],
            ],
          },
        },
      ],
      "models": [
        "0x1",
        "0x2",
      ],
    },
  ],
}
`;
